--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   </title>
   <!-- font-awesome -->
   <script src="https://kit.fontawesome.com/4ebb137696.js" crossorigin="anonymous"></script>
+  <!-- JS Excel oluşturma -->
+  <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
 </head>
 
 <body>
